--- a/faith_acquire.ipynb
+++ b/faith_acquire.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "(225, 9)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "[225 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "Timestamp('2018-12-06 00:00:00')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,19 +1170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['calories_burned', 'steps', 'distance', 'floors', 'sedentary_mins',\n",
-       "       'lightly_active_mins', 'fairly_active_mins', 'very_active_mins',\n",
-       "       'activity_calories'],\n",
+       "Index(['Calories Burned', 'Steps', 'Distance', 'Floors', 'Minutes Sedentary',\n",
+       "       'Minutes Lightly Active', 'Minutes Fairly Active',\n",
+       "       'Minutes Very Active', 'Activity Calories'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "2018-04-26                566  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,17 +1296,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Add a Month Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['month'] = df.index.month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Add a Day of the Week Column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Month'] = df.index.month\n",
-    "df['Weekday Name'] = df.index.weekday_name"
+    "df['weekday'] = df.index.weekday_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>calories_burned</th>\n",
+       "      <th>steps</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>sedentary_mins</th>\n",
+       "      <th>lightly_active_mins</th>\n",
+       "      <th>fairly_active_mins</th>\n",
+       "      <th>very_active_mins</th>\n",
+       "      <th>activity_calories</th>\n",
+       "      <th>month</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-04-26</th>\n",
+       "      <td>2635</td>\n",
+       "      <td>2931</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1347</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>566</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            calories_burned  steps  distance  floors  sedentary_mins  \\\n",
+       "Date                                                                   \n",
+       "2018-04-26             2635   2931       1.4       2            1347   \n",
+       "\n",
+       "            lightly_active_mins  fairly_active_mins  very_active_mins  \\\n",
+       "Date                                                                    \n",
+       "2018-04-26                   93                   0                 0   \n",
+       "\n",
+       "            activity_calories  month   weekday  \n",
+       "Date                                            \n",
+       "2018-04-26                566      4  Thursday  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
    ]
   },
   {
