Commit Hypotheses completed and csv created

--- a/fitbit_deliverable.ipynb
+++ b/fitbit_deliverable.ipynb
@@ -49,15 +49,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Takeaways"
+    "# Hypotheses"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$H_0$: The fitbit user has held a steady activity level during the time range of our data.\n",
+    "$H_a$: The fitbit user has not held a steady activity level during the time range of our data.\n",
+    "\n",
+    "- We reject the null hypothesis that the user's activity level stayed steady based on data. We have data to show the following information...\n",
+    "\n",
+    "- The data shows an upward trend in activity for the fitbit wearer, a 48% increase in steps and 358% increase in very active minutes. The wearer's sedentary mins decreased by 44%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H_0$: The fitbit user wore their activity band every day since the beginning of the data set range.\n",
+    "$H_a$: The fitbit user did not wear their activity band every day since the beginning of the data set range.\n",
+    "\n",
+    "- We cannot confirm nor deny this hypothesis based on the data we have, but we believe the following...\n",
+    "\n",
+    "- We believe that the fitbit user did not wear their activity band for days in the first quarter of the date range that have 0 values for steps and distance. We do not believe that it is possible to take 0 steps in a day, especially several days in a row.\n",
+    "\n",
+    "- The days with 0 values for steps and distance were early in the date range when the user may not have been as committed or acumstomed to wear the band.\n",
+    "\n",
+    "- As the activity trend increases, the band is worn consistently.\n",
+    "\n",
+    "- We believe there may have been some incentive to wear the band that motivated the user to not only continue to wear the band more and more but encouraged them to be more and more active."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2610,6 +2633,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create CSV\n",
+    "\n",
+    "- Create a CSV that includes the missing data from the data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['calories_burned', 'steps', 'distance', 'sedentary_mins',\n",
+       "       'lightly_active_mins', 'fairly_active_mins', 'very_active_mins',\n",
+       "       'activity_calories', 'active_total', 'stride', 'rm_steps',\n",
+       "       'rm_distance'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_fitbit = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_fitbit.rename(columns={'rm_steps':'Steps', 'rm_distance':'Distance'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_fitbit = fixed_fitbit[['Steps',\n",
+    "       'Distance', 'calories_burned', 'sedentary_mins',\n",
+    "       'lightly_active_mins', 'fairly_active_mins', 'very_active_mins',\n",
+    "       'activity_calories', 'active_total', 'stride', ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_fitbit.to_csv('fixed_fitbit.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Correlation with Steps"
    ]
   },
@@ -3188,70 +3283,6 @@
    "source": [
     "plot_and_eval(target_vars=target_vars, train = train, test = test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
