--- a/fitbit_deliverable.ipynb
+++ b/fitbit_deliverable.ipynb
@@ -56,30 +56,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$H_0$: The fitbit user has held a steady activity level during the time range of our data.\n",
-    "$H_a$: The fitbit user has not held a steady activity level during the time range of our data.\n",
+    "$H_0$: The Fitbit user has held a steady activity level during the time range of our data.\n",
     "\n",
-    "- We reject the null hypothesis that the user's activity level stayed steady based on data. We have data to show the following information...\n",
+    "$H_a$: The Fitbit user has not held a steady activity level during the time range of our data.\n",
     "\n",
-    "- The data shows an upward trend in activity for the fitbit wearer, a 48% increase in steps and 358% increase in very active minutes. The wearer's sedentary mins decreased by 44%"
+    "We reject the null hypothesis that the user's activity level stayed steady based on data. Data show\n",
+    "\n",
+    "- Upward trend in activity for the Fitbit wearer, including a 48% increase in steps and 358% increase in very active minutes. \n",
+    "- The wearer's sedentary minutes decreased by 44%"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$H_0$: The fitbit user wore their activity band every day since the beginning of the data set range.\n",
-    "$H_a$: The fitbit user did not wear their activity band every day since the beginning of the data set range.\n",
+    "$H_0$: The Fitbit user wore their activity band every day since the beginning of the data set range.\n",
     "\n",
-    "- We cannot confirm nor deny this hypothesis based on the data we have, but we believe the following...\n",
+    "$H_a$: The Fitbit user did not wear their activity band every day since the beginning of the data set range.\n",
     "\n",
-    "- We believe that the fitbit user did not wear their activity band for days in the first quarter of the date range that have 0 values for steps and distance. We do not believe that it is possible to take 0 steps in a day, especially several days in a row.\n",
+    "Conclusion: we cannot assess this hypothesis definitively based on available data. However, the data seem to indicate that\n",
     "\n",
-    "- The days with 0 values for steps and distance were early in the date range when the user may not have been as committed or acumstomed to wear the band.\n",
+    "- The Fitbit user did not wear their device for approximately 2 weeks during in the first quarter of the date range. Values for steps and distance were both 0 on those days. We do not believe it is possible to take 0 steps in a day, especially for several days in a row.\n",
+    "\n",
+    "- The days with 0 values for steps and distance were early in the date range when the user may not have been as committed or accustomed to wearing the band.\n",
     "\n",
     "- As the activity trend increases, the band is worn consistently.\n",
     "\n",
-    "- We believe there may have been some incentive to wear the band that motivated the user to not only continue to wear the band more and more but encouraged them to be more and more active."
+    "- We believe there may have been some incentive to wear the band that motivated the user to not only continue to wear the band more and encouraged them to be more active."
    ]
   },
   {
